# image-translator

./: .env.example  .gitignore  README.md  pyproject.toml  test_pipeline.py
app/: __init__.py  config.py  errors.py  main.py  schemas.py
app/api/: router.py
app/pipeline/: processor.py
app/services/: image_downloader.py  inpaint.py  ocr.py  text_grouping.py  text_renderer.py  translation.py
app/tasks/: celery_app.py  translate_task.py
